--- a/app/src/main/res/layout/fragment_films_list.xml
+++ b/app/src/main/res/layout/fragment_films_list.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".FilmsList">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <view class="android.support.v7.widget.RecyclerView"
+        android:id="@+id/relist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+    </view>
 
 </FrameLayout>
